10734 Rename messaging header value